tests/parsing/smtlib/v2.6/errors/114_set-option_bad_attribute_1.expected
File "tests/parsing/smtlib/v2.6/errors/114_set-option_bad_attribute_1.smt2", line 1, character 12-13:
1 | (set-option _)
                ^
Error while parsing a set-option command, read the reserved word '_',
      but expected an attribute of the form "keyword value?".
